<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeToRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whi"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.adithya.covid19.MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/india_covid_19_ntracker"
            android:textAllCaps="true"
            android:textColor="@color/bla"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastUpdatedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/last_updated"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textColor="@color/dark_green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/topContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_margin="16dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/confirmed"
                    android:textAllCaps="true"
                    android:textColor="@color/bla"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/corona"
                    android:contentDescription="@string/todo" />


                <TextView
                    android:id="@+id/confirmedTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_red"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/active"
                    android:textAllCaps="true"
                    android:textColor="@color/bla"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/active"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/activeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/recovered"
                    android:textAllCaps="true"
                    android:textColor="@color/bla"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/recovered"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/recoveredTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_green"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/deceased"
                    android:textAllCaps="true"
                    android:textColor="@color/bla"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/dead"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/deceasedTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_yellow"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:textColor="#983eff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topContainer"
            android:layout_marginBottom="25dp"
            tools:listheader="@layout/list_header" >
        </ListView>


    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>